--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,6 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import "./sass/variables.scss";
+@import "./sass/global.scss";
+@import "./sass/app.scss";
+@import "./sass/searchForm.scss";
+@import "./sass/jobContainer.scss";
+@import "./sass/jobCard.scss";
