used react bootstrap instead to handle the collapse and styling of cards

--- a/src/sass/jobContainer.scss
+++ b/src/sass/jobContainer.scss
@@ -1,6 +1,6 @@
-.container {
-  display: flex;
-  border: 1px black solid;
-  flex-wrap: wrap;
-  width: 100%;
-}
+// .container {
+//   display: flex;
+//   border: 1px black solid;
+//   flex-wrap: wrap;
+//   width: 100%;
+// }
