--- a/src/sass/jobCard.scss
+++ b/src/sass/jobCard.scss
@@ -1,49 +1,35 @@
-.container-card {
-  display: flex;
-  flex-wrap: wrap;
-  width: 45%;
-  padding: 2rem 1rem;
-  background-color: #fff;
-  box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
-  align-items: center;
-  justify-content: space-around;
-  border-radius: 0.8rem;
-  margin: 1rem auto;
-  overflow: hidden;
+// .container-card {
+//   display: flex;
+//   width: 45%;
+//   padding: 2rem 3rem;
+//   background-color: #fff;
+//   box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
+//   align-items: center;
+//   justify-content: space-around;
+//   border-radius: 0.8rem;
+//   margin: 1rem auto;
+//   overflow: hidden;
 
-  .description {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-  }
-  .img-container {
-    min-width: 5rem;
-    max-width: 5rem;
-    width: 10%;
-    transform: translateX(-8rem);
-    position: relative;
+//   .description {
+//     display: flex;
+//     width: 100%;
+//     height: 100%;
+//     flex-direction: column;
+//     padding: 2rem;
+//   }
+//   .img-container {
+//     min-width: 5rem;
+//     max-width: 5rem;
+//     width: 100%;
+//     transform: translateX(-3rem);
+//     transform: translateY(-3rem);
+//     position: relative;
 
-    &::before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: linear-gradient(
-        to right rgba(79, 172, 254, 0.8),
-        rgba(0, 242, 254, 0.8)
-      );
-      box-shadow: 0.5rem 0.5rem 3rem 0.1rem rgba(0, 0, 0, 0.05);
-      border-radius: 0.8rem;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      border-radius: 0.8rem;
-    }
-  }
-}
+//     img {
+//       width: 100%;
+//       height: 100%;
+//       object-fit: cover;
+//       border-radius: 0.8rem;
+//     }
+//   }
+// }
