--- a/src/sass/authForm.scss
+++ b/src/sass/authForm.scss
@@ -29,32 +29,59 @@
       font-weight: bold;
       background-color: #3897f0;
       border-radius: 0.4rem;
+      border: none;
       cursor: pointer;
     }
 
-    .has-separator::before,
-    .has-separator::after {
-      content: "";
-      position: absolute;
-      height: 10rem;
-      width: 40%;
-      top: 50%;
-      transform: translateY(-50%);
-      color: yellow;
-    }
-
-    .has-separator::before {
-      left: 0;
-    }
-    .has-separator::after {
-      right: 0;
-    }
     .has-separator {
       font-size: 1.3rem;
       color: #999999;
       text-transform: uppercase;
       position: relative;
       margin-bottom: 2.5rem;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        height: 0.5rem;
+        width: 40%;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #eee;
+      }
+
+      &::before {
+        left: 0;
+      }
+      &::after {
+        right: 0;
+      }
+    }
+    .google-login {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: #385185;
+      margin-bottom: 2.5rem;
+      text-decoration: none;
+      i {
+        font-size: 2rem;
+        color: #003569;
+      }
+    }
+  }
+  .sign-up {
+    text-align: center;
+    font-size: 1.4rem;
+    color: #262626;
+    padding: 2rem;
+    background-color: #fff;
+    border: 0.2rem solid #eee;
+    margin: 1rem 0;
+    width: 30%;
+    a {
+      color: #3897f0;
+      font-weight: bold;
     }
   }
 }
