--- a/src/sass/dashboardNav.scss
+++ b/src/sass/dashboardNav.scss
@@ -23,7 +23,33 @@
 
       a {
         position: relative;
-        display: none;
+        display: block;
+        width: 100%;
+        display: flex;
+        text-decoration: none;
+        color: #fff;
+
+        .title {
+          position: relative;
+          display: block;
+          padding: 0 1rem;
+          height: 6rem;
+          line-height: 6rem;
+          text-align: start;
+        }
+
+        .icon {
+          position: relative;
+          display: block;
+          min-width: 6rem;
+          height: 6rem;
+          line-height: 6rem;
+          text-align: center;
+
+          .fa {
+            font-size: 2.4rem;
+          }
+        }
       }
     }
   }
