--- a/src/sass/dashboardNav.scss
+++ b/src/sass/dashboardNav.scss
@@ -21,6 +21,10 @@
       width: 100%;
       list-style: none;
 
+      &:hover {
+        background: #ea1d63;
+      }
+
       a {
         position: relative;
         display: block;
@@ -36,6 +40,8 @@
           height: 6rem;
           line-height: 6rem;
           text-align: start;
+          white-space: nowrap;
+          font-size: 2.4rem;
         }
 
         .icon {
@@ -45,10 +51,7 @@
           height: 6rem;
           line-height: 6rem;
           text-align: center;
-
-          .fa {
-            font-size: 2.4rem;
-          }
+          font-size: 2.4rem;
         }
       }
     }
