--- a/src/sass/dashboardNav.scss
+++ b/src/sass/dashboardNav.scss
@@ -1,5 +1,9 @@
 .navigation {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  // position: fixed;
   width: 6rem;
   height: 100%;
   background-color: #3897f0;
@@ -20,6 +24,7 @@
       position: relative;
       width: 100%;
       list-style: none;
+      margin: 3rem 0;
 
       &:hover {
         background: #ea1d63;
@@ -55,5 +60,30 @@
         }
       }
     }
+  }
+}
+
+.toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 6rem;
+  height: 6rem;
+  background: #3897f0;
+  cursor: pointer;
+
+  &:hover {
+    background: #ea1d63;
+  }
+
+  &::before {
+    content: "\f0c9";
+    font-family: fontAwesome;
+    position: absolute;
+    width: 100%;
+    line-height: 6rem;
+    text-align: center;
+    font-size: 2.4rem;
+    color: #fff;
   }
 }
