--- a/src/sass/dashboardNav.scss
+++ b/src/sass/dashboardNav.scss
@@ -64,13 +64,13 @@
 }
 
 .toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 6rem;
-  height: 6rem;
-  background: #3897f0;
-  cursor: pointer;
+  // position: absolute;
+  // top: 0;
+  // right: 0;
+  // width: 6rem;
+  // height: 6rem;
+  // background: #3897f0;
+  // cursor: pointer;
 
   &:hover {
     background: #ea1d63;
