--- a/src/sass/dashboardNav.scss
+++ b/src/sass/dashboardNav.scss
@@ -9,6 +9,7 @@
   background-color: #3897f0;
   transition: 0.5s;
   overflow: hidden;
+  z-index: 1000;
 
   &:hover {
     width: 30rem;
@@ -63,27 +64,27 @@
   }
 }
 
-.toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 6rem;
-  height: 6rem;
-  background: #3897f0;
-  cursor: pointer;
+// .toggle {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+//   width: 6rem;
+//   height: 6rem;
+//   background: #3897f0;
+//   cursor: pointer;
 
-  &:hover {
-    background: #ea1d63;
-  }
+//   &:hover {
+//     background: #ea1d63;
+//   }
 
-  &::before {
-    content: "\f0c9";
-    font-family: fontAwesome;
-    position: absolute;
-    width: 100%;
-    line-height: 6rem;
-    text-align: center;
-    font-size: 2.4rem;
-    color: #fff;
-  }
-}
+//   &::before {
+//     content: "\f0c9";
+//     font-family: fontAwesome;
+//     position: absolute;
+//     width: 100%;
+//     line-height: 6rem;
+//     text-align: center;
+//     font-size: 2.4rem;
+//     color: #fff;
+//   }
+// }
